--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "bridge": {
         "name": "Homebridge",
-        "username": "b8:27:eb:ff:c7:f3",
+        "username": "B8:27:EB:FF:C7:F3",
         "port": 51826,
         "pin": "199-20-912"
     },
@@ -10,7 +10,7 @@
 
     "accessories": [
         {
-            "accessory": "Nature Remo",
+            "accessory": "IRKit",
             "name": "照明",
             "irkit_host": "Remo-58D603.local",
             "on_form": {"format":"raw","freq":38,"data":[18031,8755,1111,1111,1111,3341,1111,1111,1111,1111,1111,1111,1111,1111,1111,1111,1111,3341,1111,3341,1111,1111,1111,3341,1111,3341,1111,1111,1111,3341,1111,3341,1111,1111,1111,3341,1111,1111,1111,3341,1111,3341,1111,3341,1111,3341,1111,1111,1111,3341,1111,1111,1111,3341,1111,1111,1111,1111,1111,1111,1111,1111,1111,3341,1111,1111,1111,65535,0,18031,18031,4400,1150]},
