動作確認済み

--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
 
     "accessories": [
         {
-            "name": "Room Lamp A",
+            "name": "リビングの照明",
             "accessory": "NatureRemo",
             "host": "Remo-58D603.local",
             "path": "/messages",
@@ -19,7 +19,7 @@
             "timeout": 2000,
             "retry_interval": 500,
             "retry": 3,
-            "on": { "format": "us", "freq": 38, "data": [] },
+            "on": {"format":"us","freq":38,"data":[8998,4539,527,605,532,1731,530,601,531,600,529,621,510,599,532,599,531,1730,532,1731,524,609,520,1736,533,1730,531,602,529,1732,528,1731,531,601,531,1730,531,601,528,1732,524,1739,528,1737,525,1728,527,607,529,1731,531,603,528,1730,532,598,533,597,532,601,532,599,528,1729,528,607,532,42021,8944,2300,513,65535,0,30916,8947,2282,524]},
             "off": {"format":"us","freq":38,"data":[8995,4545,528,600,531,1728,534,600,522,609,529,603,527,603,528,618,513,1731,529,1734,531,596,532,1731,524,1738,528,601,523,1739,522,1737,532,599,532,600,526,1737,522,1738,530,1731,529,1730,531,1734,529,601,521,1739,529,1733,528,602,522,612,527,601,521,610,529,602,528,1733,522,609,528,42024,8941,2284,529]},
             "command_order": [
               { "on": ["on"] },
